# shary

./: Cargo.toml  README.md
htmltest/: index.html
src/: common.rs  lib.rs  logging.rs  main.rs  network.rs  ui.rs
src/network/: discovery.rs  protocol.rs  server.rs  test.rs
tests/: integration_test.rs
