[package]
name = "shary"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 2 # fast and small wasm

[profile.dev.package."*"]
opt-level = 2

[dependencies]
egui = "0.19"
eframe = { version = "0.19.0", features = ["persistence"] }
color-eyre = "0.6"
tracing = "0.1"
tracing-subscriber = "0.2.0"
random-string = "1.0"
rfd = "0.10"