[package]
name = "shary"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 2 # fast and small wasm

[profile.dev.package."*"]
opt-level = 2

[dependencies]
color-eyre = "0.6"
crossbeam-channel = "0.5"
eframe = { version = "0.19.0", features = ["persistence"] }
egui = "0.19"
network-interface = "0.1"
random-string = "1.0"
rfd = "0.10"
tracing = "0.1"
tracing-subscriber = "0.2.0"