[package]
name = "shary"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
#opt-level = 2 # fast and small wasm

[profile.dev.package."*"]
#opt-level = 2

[dependencies]
bytes = { version = "1.3.0", features = ["serde"] }
clap = { version = "4.0.26", features = ["derive"] }
color-eyre = "0.6"
const-str = { version = "0.5", features = ["std"] }
crossbeam-channel = "0.5"
eframe = { version = "0.19.0", features = ["persistence"] }
egui = "0.19"
lazy_static = "1.4.0"
network-interface = "0.1"
random-string = "1.0"
rfd = "0.10"
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.22.0", features = ["full"] }
tokio-tar = "0.3.0"
tracing = "0.1"
tracing-subscriber = "0.2.0"
